# qmt

./: .gitignore  monitor.py  pyproject.toml  run_monitor.bat
assets/: max_profit.csv  max_profit.pkl
assets/investment_targets/: investment_targets.csv
config/: __init__.py  config.ini  data_dic.py
data/: data_config.py  example.py  mytimeseries.py  prepare_multi_timeseries_list.py  utils.py  xt_data_download.py  xt_data_get_local_data.py
deep_learning/: lstm.py  model_config.py  monitor_buy.py  predicting.py  tcn.py  tsmixer.py
loggers/: __init__.py  loguru_logger.py  my_logger.py
mini_xtclient/: mini_xt.py  pyauto.py
model_research/: set_jupyter.py
stop_loss/: absolute_profit_stop_loss.py  max_profit_stop_loss.py  stop_loss_main.py
tests/: __init__.py  conftests.py  test_data.py  test_directory.py  test_miniXT.py  test_model.py  test_order.py  test_stop_loss.py  tmp.py
trader/: __init__.py  reporter.py  xt_acc.py  xt_data.py  xt_trader.py  xt_trader_callback.py  xtquant_client.py
utils/: utils_data.py  utils_general.py  utils_xtclient.py
参考资料/: git使用.md
