[tool.poetry]
name = "qmt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
psutil = "^6.0.0"
pathlib2 = "^2.3.7.post1"
pywin32 = "^306"
pywinauto = "^0.6.8"
pyautogui = "^0.9.54"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
darts = "^0.30.0"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
